style(Java15): use formatted() instead of String.format()
Co-authored-by: Jakob Schnell <jakob.schnell@heigit.org>