@@ -81,7 +81,7 @@ public class RouteResultBuilder
         for (int ri = 0; ri < responses.size(); ++ri) {
             GHResponse response = responses.get(ri);
             if (response.hasErrors())
-                throw new InternalServerException(RoutingErrorCodes.UNKNOWN, String.format("Unable to find a route between points %d (%s) and %d (%s)", ri, FormatUtility.formatCoordinate(request.getCoordinates()[ri]), ri + 1, FormatUtility.formatCoordinate(request.getCoordinates()[ri + 1])));
+                throw new InternalServerException(RoutingErrorCodes.UNKNOWN, "Unable to find a route between points %d (%s) and %d (%s)".formatted(ri, FormatUtility.formatCoordinate(request.getCoordinates()[ri]), ri + 1, FormatUtility.formatCoordinate(request.getCoordinates()[ri + 1])));
 
             handleResponseWarnings(result, response);
 
@@ -120,7 +120,7 @@ public class RouteResultBuilder
 
     private RouteResult[] createRouteResultSetFromMultiplePaths(GHResponse response, RoutingRequest request, List<RouteExtraInfo>[] extras) throws Exception {
         if (response.hasErrors())
-            throw new InternalServerException(RoutingErrorCodes.UNKNOWN, String.format("Unable to find a route between points %d (%s) and %d (%s)", 0, FormatUtility.formatCoordinate(request.getCoordinates()[0]), 1, FormatUtility.formatCoordinate(request.getCoordinates()[1])));
+            throw new InternalServerException(RoutingErrorCodes.UNKNOWN, "Unable to find a route between points %d (%s) and %d (%s)".formatted(0, FormatUtility.formatCoordinate(request.getCoordinates()[0]), 1, FormatUtility.formatCoordinate(request.getCoordinates()[1])));
 
         RouteResult[] resultSet = new RouteResult[response.getAll().size()];
 
