@@ -98,7 +98,7 @@ public class RoutingProfileManager {
                 }
             }
 
-            LOGGER.info(String.format("%d tasks submitted.", nTotalTasks));
+            LOGGER.info("%d tasks submitted.".formatted(nTotalTasks));
 
             int nCompletedTasks = 0;
             while (nCompletedTasks < nTotalTasks) {
@@ -139,8 +139,8 @@ public class RoutingProfileManager {
             RoutingManagerConfiguration rmc = RoutingManagerConfiguration.loadFromFile(graphProps);
 
             int initializationThreads = config.getInitializationThreads();
-            LOGGER.info(String.format("====> Initializing profiles from '%s' (%d threads) ...",
-                    config.getSourceFile(), initializationThreads));
+            LOGGER.info("====> Initializing profiles from '%s' (%d threads) ...".formatted(
+                config.getSourceFile(), initializationThreads));
 
             if (config.isPreparationMode()) {
                 prepareGraphs(graphProps, config);
@@ -166,7 +166,7 @@ public class RoutingProfileManager {
                     }
                 }
 
-                LOGGER.info(String.format("%d tasks submitted.", nTotalTasks));
+                LOGGER.info("%d tasks submitted.".formatted(nTotalTasks));
 
                 int nCompletedTasks = 0;
                 while (nCompletedTasks < nTotalTasks) {
@@ -229,7 +229,7 @@ public class RoutingProfileManager {
         if (config.getMaximumDistanceRoundTripRoutes() != 0 && config.getMaximumDistanceRoundTripRoutes() < searchParams.getRoundTripLength()) {
             throw new ServerLimitExceededException(
                     RoutingErrorCodes.REQUEST_EXCEEDS_SERVER_LIMIT,
-                    String.format("The requested route length must not be greater than %s meters.", config.getMaximumDistanceRoundTripRoutes())
+                "The requested route length must not be greater than %s meters.".formatted(config.getMaximumDistanceRoundTripRoutes())
             );
         }
 
@@ -250,8 +250,8 @@ public class RoutingProfileManager {
                 if (gr.getErrors().get(0) instanceof com.graphhopper.util.exceptions.ConnectionNotFoundException) {
                     throw new RouteNotFoundException(
                             RoutingErrorCodes.ROUTE_NOT_FOUND,
-                            String.format("Unable to find a route for point (%s).",
-                                    FormatUtility.formatCoordinate(c0))
+                        "Unable to find a route for point (%s).".formatted(
+                            FormatUtility.formatCoordinate(c0))
                     );
                 } else if (gr.getErrors().get(0) instanceof com.graphhopper.util.exceptions.PointNotFoundException) {
                     StringBuilder message = new StringBuilder();
@@ -269,9 +269,9 @@ public class RoutingProfileManager {
                 // has happened, so return that a route could not be found
                 throw new RouteNotFoundException(
                         RoutingErrorCodes.ROUTE_NOT_FOUND,
-                        String.format("Unable to find a route for point (%s).",
-                                FormatUtility.formatCoordinate(c0)
-                        ));
+                    "Unable to find a route for point (%s).".formatted(
+                        FormatUtility.formatCoordinate(c0)
+                    ));
             }
         }
 
@@ -378,35 +378,35 @@ public class RoutingProfileManager {
                             }
                             throw new RouteNotFoundException(
                                     code,
-                                    String.format("Unable to find a route between points %d (%s) and %d (%s). %s",
-                                            i,
-                                            FormatUtility.formatCoordinate(c0),
-                                            i + 1,
-                                            FormatUtility.formatCoordinate(c1),
-                                            details.values().stream().map(Object::toString).collect(Collectors.joining(" "))
-                                    )
+                                "Unable to find a route between points %d (%s) and %d (%s). %s".formatted(
+                                    i,
+                                    FormatUtility.formatCoordinate(c0),
+                                    i + 1,
+                                    FormatUtility.formatCoordinate(c1),
+                                    details.values().stream().map(Object::toString).collect(Collectors.joining(" "))
+                                )
                             );
                         }
                         throw new RouteNotFoundException(
                                 RoutingErrorCodes.ROUTE_NOT_FOUND,
-                                String.format("Unable to find a route between points %d (%s) and %d (%s).",
-                                        i,
-                                        FormatUtility.formatCoordinate(c0),
-                                        i + 1,
-                                        FormatUtility.formatCoordinate(c1)
-                                )
+                            "Unable to find a route between points %d (%s) and %d (%s).".formatted(
+                                i,
+                                FormatUtility.formatCoordinate(c0),
+                                i + 1,
+                                FormatUtility.formatCoordinate(c1)
+                            )
                         );
                     } else if (gr.getErrors().get(0) instanceof com.graphhopper.util.exceptions.MaximumNodesExceededException) {
                         Map<String, Object> details = ((MaximumNodesExceededException) gr.getErrors().get(0)).getDetails();
                         throw new RouteNotFoundException(
                                 RoutingErrorCodes.PT_MAX_VISITED_NODES_EXCEEDED,
-                                String.format("Unable to find a route between points %d (%s) and %d (%s). Maximum number of nodes exceeded: %s",
-                                        i,
-                                        FormatUtility.formatCoordinate(c0),
-                                        i + 1,
-                                        FormatUtility.formatCoordinate(c1),
-                                        details.get(MaximumNodesExceededException.NODES_KEY).toString()
-                                )
+                            "Unable to find a route between points %d (%s) and %d (%s). Maximum number of nodes exceeded: %s".formatted(
+                                i,
+                                FormatUtility.formatCoordinate(c0),
+                                i + 1,
+                                FormatUtility.formatCoordinate(c1),
+                                details.get(MaximumNodesExceededException.NODES_KEY).toString()
+                            )
                         );
                     } else if (gr.getErrors().get(0) instanceof com.graphhopper.util.exceptions.PointNotFoundException) {
                         StringBuilder message = new StringBuilder();
@@ -423,15 +423,15 @@ public class RoutingProfileManager {
                                 // we should therefore let them know that they are already using the limit.
                                 if (pointRadius == -1) {
                                     pointRadius = routeProfiles.getRouteProfile(profileType).getConfiguration().getMaximumSnappingRadius();
-                                    message.append(String.format("Could not find routable point within the maximum possible radius of %.1f meters of specified coordinate %d: %s.",
-                                            pointRadius,
-                                            pointReference,
-                                            FormatUtility.formatCoordinate(pointCoordinate)));
+                                    message.append("Could not find routable point within the maximum possible radius of %.1f meters of specified coordinate %d: %s.".formatted(
+                                        pointRadius,
+                                        pointReference,
+                                        FormatUtility.formatCoordinate(pointCoordinate)));
                                 } else {
-                                    message.append(String.format("Could not find routable point within a radius of %.1f meters of specified coordinate %d: %s.",
-                                            pointRadius,
-                                            pointReference,
-                                            FormatUtility.formatCoordinate(pointCoordinate)));
+                                    message.append("Could not find routable point within a radius of %.1f meters of specified coordinate %d: %s.".formatted(
+                                        pointRadius,
+                                        pointReference,
+                                        FormatUtility.formatCoordinate(pointCoordinate)));
                                 }
 
                             } else {
@@ -447,11 +447,11 @@ public class RoutingProfileManager {
                     // has happened, so return that a route could not be found
                     throw new RouteNotFoundException(
                             RoutingErrorCodes.ROUTE_NOT_FOUND,
-                            String.format("Unable to find a route between points %d (%s) and %d (%s).",
-                                    i,
-                                    FormatUtility.formatCoordinate(c0),
-                                    i + 1,
-                                    FormatUtility.formatCoordinate(c1))
+                        "Unable to find a route between points %d (%s) and %d (%s).".formatted(
+                            i,
+                            FormatUtility.formatCoordinate(c0),
+                            i + 1,
+                            FormatUtility.formatCoordinate(c1))
                     );
                 }
             }
@@ -614,13 +614,13 @@ public class RoutingProfileManager {
                 }
 
                 if (config.getMaximumDistance() > 0 && totalDist > config.getMaximumDistance())
-                    throw new ServerLimitExceededException(RoutingErrorCodes.REQUEST_EXCEEDS_SERVER_LIMIT, String.format("The approximated route distance must not be greater than %s meters.", config.getMaximumDistance()));
+                    throw new ServerLimitExceededException(RoutingErrorCodes.REQUEST_EXCEEDS_SERVER_LIMIT, "The approximated route distance must not be greater than %s meters.".formatted(config.getMaximumDistance()));
                 if (dynamicWeights && config.getMaximumDistanceDynamicWeights() > 0 && totalDist > config.getMaximumDistanceDynamicWeights())
-                    throw new ServerLimitExceededException(RoutingErrorCodes.REQUEST_EXCEEDS_SERVER_LIMIT, String.format("By dynamic weighting, the approximated distance of a route segment must not be greater than %s meters.", config.getMaximumDistanceDynamicWeights()));
+                    throw new ServerLimitExceededException(RoutingErrorCodes.REQUEST_EXCEEDS_SERVER_LIMIT, "By dynamic weighting, the approximated distance of a route segment must not be greater than %s meters.".formatted(config.getMaximumDistanceDynamicWeights()));
                 if (fallbackAlgorithm && config.getMaximumDistanceAvoidAreas() > 0 && totalDist > config.getMaximumDistanceAvoidAreas())
-                    throw new ServerLimitExceededException(RoutingErrorCodes.REQUEST_EXCEEDS_SERVER_LIMIT, String.format("With these options, the approximated route distance must not be greater than %s meters.", config.getMaximumDistanceAvoidAreas()));
+                    throw new ServerLimitExceededException(RoutingErrorCodes.REQUEST_EXCEEDS_SERVER_LIMIT, "With these options, the approximated route distance must not be greater than %s meters.".formatted(config.getMaximumDistanceAvoidAreas()));
                 if (useAlternativeRoutes && config.getMaximumDistanceAlternativeRoutes() > 0 && totalDist > config.getMaximumDistanceAlternativeRoutes())
-                    throw new ServerLimitExceededException(RoutingErrorCodes.REQUEST_EXCEEDS_SERVER_LIMIT, String.format("The approximated route distance must not be greater than %s meters for use with the alternative Routes algorithm.", config.getMaximumDistanceAlternativeRoutes()));
+                    throw new ServerLimitExceededException(RoutingErrorCodes.REQUEST_EXCEEDS_SERVER_LIMIT, "The approximated route distance must not be greater than %s meters for use with the alternative Routes algorithm.".formatted(config.getMaximumDistanceAlternativeRoutes()));
             }
         }
 
